welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: ')' expected but '<-' found.
	while(i<-0 to 5) { avance(); t[i]==getCouleurSol() ; t[i]=t[i+1]; }
               ^Array1:7: error: illegal start of simple expression
}
^